Always emit diagnostic files, even if we do not provide any fixits

BUG: 513153